.[1.16.0] - UNRELEASED
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/202[#202] [core] Allow `randomClassInstance` to directly use predefined generators

[discrete]
=== Changed

* ...

[discrete]
=== Fixed

* ...

[discrete]
=== Other

* ...

====

.[1.15.0] - 2023-10-06
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/195[#195] [core] Update dictionary files, including:
** Data and functions in existing data providers, including new functions:
*** `Faker().company.department()`
*** `Faker().dnd.name...`
*** `Faker().internet.safeDomainSuffix()`
*** `Faker().southPark.episodes()`
** Updates to existing localized dictionaries
* https://github.com/serpro69/kotlin-faker/pull/197[#197] [cli] Render sub-providers functions in cli output
* https://github.com/serpro69/kotlin-faker/pull/200[#200] [core] Add new data providers

++++
<details><summary><h3>New Data Providers</h3></summary>
<p>
++++
* `archer`
* `final_fantasy_xiv`
* `mitch_hedberg`
* `train_station`
++++
</p>
</details>
++++

[discrete]
=== Changed

* https://github.com/serpro69/kotlin-faker/pull/197[#197] [cli] Change cli `lookup` command to return matching providers by name

[discrete]
=== Fixed

* https://github.com/serpro69/kotlin-faker/pull/188[#188] [core] Fix postcode for en-GB locale
* https://github.com/serpro69/kotlin-faker/pull/193[#193] [core] Fix localized postcodes with regex patterns

====

.[1.14.0] - 2023-03-19
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/179[#179] [core] Add parameter info context to user defined generators
* https://github.com/serpro69/kotlin-faker/pull/176[#176], https://github.com/serpro69/kotlin-faker/pull/182[#182], https://github.com/serpro69/kotlin-faker/pull/183[#183], [core] Update dictionary files, including:
** Data and functions in existing data providers
*** `Faker().food.allergens()`
** Updates to existing localized dictionaries

++++